[project]
name = "langchain-doc-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
